# gptMemory

./: .gitignore  .replit  EmailSender.py  app.py  memory.db  pyproject.toml  requirements.txt
static/: memoryManager.js
templates/: index.html
