[tool.poetry]
name = "repl-nix-gptmemory"
version = "0.1.0"
description = ""
authors = ["Francois Girard"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
psycopg2-binary = "2.9.9"
flask-session = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
